# Gas_Town_Trial

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8b8bbaf23814_initial.py
app/: config.py  database.py  main.py
app/core/: security.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  base.py  organisation.py  user.py
app/routers/: __init__.py  auth.py
app/schemas/: __init__.py  token.py  user.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: About.tsx  AboutPage.tsx  Home.tsx  HomePage.tsx
scripts/: init-dbs.sql  init_db.py  mongo-init.js  test_schema.py
src/: database.py
src/models/: __init__.py  asset.py  audit_log.py  base.py  marketplace_listing.py  marketplace_purchase.py  notification.py  organisation.py  organisation_member.py  sensor.py  sensor_alarm.py  sensor_label.py  sql.py  user.py
src/mongodb/: __init__.py  indexes.py
